; ModuleID = '/home/carl/AnghaBench/vlc/src/playlist/extr_request.c_vlc_playlist_RequestInsert.c'
source_filename = "/home/carl/AnghaBench/vlc/src/playlist/extr_request.c_vlc_playlist_RequestInsert.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vlc_playlist_RequestInsert(i32* %0, i64 %1, i32** %2, i64 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32**, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32** %2, i32*** %7, align 8
  store i64 %3, i64* %8, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = call i32 @vlc_playlist_AssertLocked(i32* %10)
  %12 = load i32*, i32** %5, align 8
  %13 = call i64 @vlc_playlist_Count(i32* %12)
  store i64 %13, i64* %9, align 8
  %14 = load i64, i64* %6, align 8
  %15 = load i64, i64* %9, align 8
  %16 = icmp ugt i64 %14, %15
  br i1 %16, label %17, label %19

17:                                               ; preds = %4
  %18 = load i64, i64* %9, align 8
  store i64 %18, i64* %6, align 8
  br label %19

19:                                               ; preds = %17, %4
  %20 = load i32*, i32** %5, align 8
  %21 = load i64, i64* %6, align 8
  %22 = load i32**, i32*** %7, align 8
  %23 = load i64, i64* %8, align 8
  %24 = call i32 @vlc_playlist_Insert(i32* %20, i64 %21, i32** %22, i64 %23)
  ret i32 %24
}

declare dso_local i32 @vlc_playlist_AssertLocked(i32*) #1

declare dso_local i64 @vlc_playlist_Count(i32*) #1

declare dso_local i32 @vlc_playlist_Insert(i32*, i64, i32**, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
